<resources>
    <string name="app_name">Chitwan Travel App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Home">Home</string>

    <string name="Hotel">Hotels</string>

    <string name="Restaurants">Restaurants</string>

    <string name="Recreation">Recreational Areas</string>

    <string name="Events">Events</string>

    <string name="Sports">Sports/Esports</string>

    <string name="Shopping">Shopping Centres</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_city">The district takes its name from the Chitwan Valley, one of Nepal\'s Inner Terai valleys between the Mahabharat and Siwalik ranges, both considered foothills of the Himalayas. Narayangadh is located on the banks of the Narayani River, and is the main town with numerous shopping zones where people come from all over the district and neighboring districts. Chitwan is one of the few remaining undisturbed vestiges of the Terai region, which formerly extended over the foothills of Nepal.</string>


    <string name="info_royalcentury">Set in Bharatpur, Royal Century offers a bar, garden and terrace. Among the facilities of this property are a restaurant, a 24-hour front desk and room service, along with free WiFi throughout the property. The hotel features family rooms.

    The hotel offers a continental or buffet breakfast.

    We speak your language!
    </string>
    <string name="info_munch_time"><![CDATA[Munch Time Cafe is famous for Wood Fired Pizza, Burger and Customized Cakes. Munch time is an old classic cafe in Narayangarh. The taste is good and the prices are also reasonable.]]></string>
    <string name="info_kc"><![CDATA[A Sauraha classic, KC’s is set in a cool, thatch-roofed bungalow with an open terrace overlooking a manicured garden, with a fire pit for winter dinners. The chefs here look the part and the well-executed menu runs from Nepali and Indian curries to pizzas and pasta. We recommend the top-up-able thalis and authentic tandoori dishes, washed down with a lassi.]]></string>
    <string name="info_friends"><![CDATA[This rooftop restaurant is easy to miss, but do not! It is the best place to hang out in downtown Sauraha, at any time of day, with a cool vibe and tunes to match. The handmade menus on beer-carton cardboard reflect the personal touch of the creative owners, who have put new spins on all sorts of mainly Mexican and Italian dishes.]]></string>
    <string name="info_greasy"><![CDATA[This place is one of the finest place in sauraha for food and ambience. The ambience here is good. The drinks and foods are really yummy and it won\'t disappoint you. They serve quality food as well]]></string>
    <string name="info_elep_safari">Elephant Safari Chitwan—which is almost synonymous of CNP— is the most popular and adventurous way to encounter with the scores of wild animals including rare one-horned rhinos and to elusive Royal Bengal Tigers as well as hundreds of species of birds and number of reptiles. The experienced Mahouts take you deep into the forest to ensure more sights of animals at closest possible distance to make your trips more enjoyable and meaningful.</string>
    <string name="jeep">One of the options to see the wildlife in Chitwan national park is to go on a jeep safari. During this trip you will sit in de back of an open jeep to see the animals. The driver will stop to show places and animals. You will have a great opportunity to get some good pictures this way. During the trip, the guide will hang at the back of the vehicle to spot animals. He will also give information about the environment and the wildlife.</string>
    <string name="tharu">A melodious ethnic dance performed by men and women with rhyme or drums. The clashing of sticks represents and performance how to keep away the rhinos and other wild animals from the human habitat and their farming land. You can enjoy your evening after dinner and watch the Tharu Stick Dance.</string>
    <string name="mahotsav">The festival being held on the banks of the Narayani River will showcase local agricultural and industrial products, and traditional cuisines in 475 stalls. Other attractions of the event are cultural and literary shows, and water sports, such as rafting.</string>
    <string name="bhatbhateni">Today, Bhat-Bhateni is Nepal’s leading supermarket and departmental store chain, spread out in Kathmandu the capital city and economic hub and in all major cities around the country. Bhat-Bhatenis one of Nepal’s most trusted brands and sees a daily footfall of over 100,000 patrons.</string>
    <string name="cg">CG Landmark, a mixed used development which includes Retail, Entertainment, Mall, Hotel, Restaurants is the new offering from Chaudhary Group. Coming from a rich global experience and history, CG Landmark is built with a conviction of offering revolutionary facilities; it will be a realm of the future amidst the scenic environment of Chitwan. Adorned with spectacular architecture, inviting interior and wonderful world of amenities and attractions, it is an amalgamation of practicality and charisma.</string>


</resources>